<resources>
    <string name="app_name" translatable="false">Yazy</string>
    <string name="taps">TAPS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon">icon</string>
    <string name="hesabe">Hesabe</string>
    <string name="explore_cities">Explore Cities</string>
    <string name="favorites">Favorites</string>
    <string name="flying_from">Flying from</string>
    <string name="flying_to">Flying to</string>
    <string name="select_month">Select month</string>
    <string name="travel_agency_optional">Travel agency</string>
    <string name="search">Search</string>
    <string name="search_offers">Search Offers</string>
    <string name="currency">KWD</string>
    <string name="available_trips">Available Trips</string>
    <string name="go_to">Go to</string>
    <string name="from">From</string>
    <string name="about_us">About us</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="contact_us">Contact us</string>
    <string name="menu">Menu</string>
    <string name="flights">Flights</string>
    <string name="hotels">Hotels</string>
    <string name="details">Details</string>
    <string name="hint">Hint</string>
    <string name="fill_one">Fill  one field at lest</string>
    <string name="des_req">Destination required</string>
    <string name="book_now">Book Now</string>
    <string name="travel_agency">Travel Agency</string>
    <string name="call_us_on">Call us on</string>
    <string name="email">Email</string>
    <string name="head_office_address">Head office address</string>
    <string name="working_hours">Working hours</string>
    <string name="check_our_offers">Check Our Offers</string>
    <string name="book_your_trip">Book Your Trip</string>
    <string name="name">Full name as it is written in the Passport</string>
    <string name="mobile">Mobile</string>
    <string name="passengers">Passengers</string>
    <string name="personal_info">Personal Info</string>
    <string name="total_cost">Total Cost</string>
    <string name="pay">Pay now</string>
    <string name="adults">Adults</string>
    <string name="children">Children</string>
    <string name="payment_confirmed">Payment Confirmed!</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="back_to_home">Back to Home</string>
    <string name="please_check_your_internet_connection">please check your internet connection</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_favorites_found">No Favorites Found</string>
    <string name="browse_offers">Browse offers</string>
    <string name="you_do_not_have_any_trips_in_your_favorites">You do not have any trips in your favorites.</string>
    <string name="no_results_found">No Results Found</string>
    <string name="we_couldn_t_find_any_results_change_selected_filters_or_try_later">We couldn’t find any results. Change selected filters or try later.</string>
    <string name="required">Required</string>
    <string name="valid_name">please insert your full name as it is written in the Passport</string>
    <string name="mobileNumberLengthError">Mobile must be 11 digits</string>
    <string name="mobileNumberNotValid">Mobile Number Not Valid</string>
    <string name="valid_mail_is_required">Valid email is required</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="_2020">2020</string>
    <string name="can_not_perfrom">Can not perform this action right now </string>
    <string name="no_offers_available">No Offers Available</string>
    <string name="there_s_no_offers_available_now">There\'s no offers available now.</string>
    <string name="tv_phone">00000000000</string>
    <string name="tv_email">email@rmail.com</string>
    <string name="tv_location">Doki, Cairo , Egypt</string>
    <string name="your_payment_has_been_confirmed_a_confirmation_email_has_been_sent_to">Your payment has been confirmed. A confirmation email has been sent to</string>
    <string name="try_again">Try Again</string>
    <string name="canceled">Cancelled</string>
    <string name="invalid_customer">Invalid Customer</string>
    <string name="invalid_transaction_mode">invalid Transaction Mode</string>
    <string name="some_thing_went_wrong">Something went wrong try again later</string>
    <string name="card_details_invalid">Card details are invalid....</string>
    <string name="secction_falied_to_start">Session Failed to start.........</string>
    <string name="processing">Processing</string>
    <string name="notifications">Notifications</string>
    <string name="select_your_country">Select Your Country</string>
    <string name="your_country">Your Country</string>
    <string name="submit">Submit</string>
    <string name="no_notifications">No Notifications!</string>
    <string name="there_s_no_new_notification_yet">There\'s no new notification yet</string>
    <string name="April">April</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string name="one">-01</string>
    <string name="two">-02</string>
    <string name="three">-03</string>
    <string name="four">-04</string>
    <string name="five">-05</string>
    <string name="six">-06</string>
    <string name="seven">-07</string>
    <string name="eight">-08</string>
    <string name="nine">-09</string>
    <string name="ten">-10</string>
    <string name="eleven">-11</string>
    <string name="twelve">-12</string>
    <string name="travel_company">travel Company</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register">Register</string>
    <string name="skip">Skip</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_mobile_number_to_receive_a_verification_code">Enter your mobile number to receive a verification code</string>
    <string name="get_code">Get Code</string>
    <string name="create_password">Create Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="create_account">Create Account</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_4_digit_number_that_sent_to">Enter 6 digit number that sent to</string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend Code</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_registered_mobile_number_to_reset_your_password">Enter your registered mobile number to reset your password</string>
    <string name="registeration">Registeration</string>
    <string name="username">Full Name</string>
    <string name="mobile_requ">Mobile number required</string>
    <string name="password_requ">Password required</string>
    <string name="old_password_requ">Old Password required</string>
    <string name="user_name_requ">please write your full name</string>
    <string name="passwords_not_match">Passwords not match</string>
    <string name="passwords_same">Old and new Password are the same</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="change_password">Change Password</string>
    <string name="no_trips_yet">No Trips Yet</string>
    <string name="you_don_t_have_any_scheduled_trips_yet">You don’t have any scheduled trips yet</string>
    <string name="explore_our_trips">Explore Our Trips</string>
    <string name="my_trips">My Trips</string>
    <string name="logout">Logout</string>
    <string name="my_info">My Info</string>
    <string name="profile">Profile</string>
    <string name="change">Change</string>
    <string name="current_password">Current Password</string>
    <string name="update">Update</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="edit">Edit</string>
    <string name="my_favorites">My Favorites</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="trip_details">Trip Details</string>
    <string name="airlines">Airlines</string>
    <string name="no_profile_yet">No Profile Yet</string>
    <string name="you_have_to_login_register_first">You have to login/Register first</string>
    <string name="error">error</string>
    <string name="flight_class">Class</string>
    <string name="toatal">Total</string>
    <string name="tickets">Tickets</string>
    <string name="prease_back">Please click BACK again to exit</string>
    <string name="flight_class_text">Flight Class</string>
    <string name="price_range">Price Range</string>
    <string name="basic_search">Basic Search</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="sucess">Successful booking</string>
    <string name="suc">\"Successful book offer to \"</string>
    <string name="enj">\" enjcoy it !\"</string>
    <string name="sort_by">Sort By</string>
    <string name="apply">Apply</string>
    <string name="most_recent">Most Recent</string>
    <string name="most_liked">Most Liked</string>
    <string name="price_low_to_high">Price Low to High</string>
    <string name="price_high_to_low">Price High to Low</string>
    <string name="room">Room</string>
    <string name="less_liked">Less Liked</string>
    <string name="clear_all">Clear All</string>
    <string name="clear_notifications">Clear Notifications</string>
    <string name="are_you_sure_you_want_to_clear_all_your_notifications">Are you sure you want to clear all your notifications ?</string>
    <string name="you_will_not_be_able_to_recover_them_afterwards">You will not be able to recover them afterwards</string>
    <string name="you_can_t_add_to_favorites">You can\'t add To favorites!</string>
    <string name="login_if_you_want_to_add_this_offer_to_favorites">Login if you want to add this offer to favorites</string>
    <string name="change_language">Change Language</string>
    <string name="my_account_info">My account info</string>
    <string name="arabic">العربيه</string>
    <string name="english">English</string>
    <string name="add_traveller">Add Traveller</string>
    <string name="no_frequent_travellers">No Frequent Travellers</string>
    <string name="you_don_t_have_any_registered_travellers_yet">You don’t have any registered travellers yet</string>
    <string name="off_on_your_next_trip">off on your next trip</string>
    <string name="we_ll_send_you_the_promo_code_on_your_email_to_use_it_on_your_next_trip">We’ll send you the promo code on your Email to use it on your next trip</string>
    <string name="get_it">Get it</string>
    <string name="no_thanks">NO, THANKS</string>
    <string name="save_2">Save</string>
</resources>