<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/layout"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="80dp"
            android:background="@drawable/shadow_solid_top_big" />


        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_gift" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/save_2"
                android:textColor="#252b37"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:gravity="center_horizontal"
                android:textColor="#ef4b4b"
                android:textSize="47sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:gravity="center_horizontal"
                android:text="@string/off_on_your_next_trip"
                android:textColor="#252b37"
                android:textSize="13sp"
                android:textStyle="normal" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:gravity="center_horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/we_ll_send_you_the_promo_code_on_your_email_to_use_it_on_your_next_trip"
                android:textColor="#252b37"
                android:textSize="12sp"
                android:textStyle="normal" />


            <Button
                android:id="@+id/btnGetIT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/sold_blue"
                android:text="@string/get_it"
                android:textAllCaps="false"
                android:textColor="@color/white" />


            <Button
                android:id="@+id/btnNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@null"
                android:text="@string/no_thanks"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

        </LinearLayout>


    </RelativeLayout>


</layout>